tests/semantic/underscore/underscore.err
Error: Non-numerical operand for comparison, instead left operand has type R in file underscore.dl at line 8
F(x,y) :- F(x,y),  x > _.
-------------------^------
Error: Underscore in binary relation in file underscore.dl at line 8
F(x,y) :- F(x,y),  x > _.
-------------------^------
Error: Underscore in head of rule in file underscore.dl at line 10
F("string",_).
^--------------
Error: Underscore in fact in file underscore.dl at line 10
F("string",_).
-----------^---
Error: Underscore in head of rule in file underscore.dl at line 12
F(_,y) :- F(_,y).
^-----------------
5 errors generated, evaluation aborted
